# internal/router/route.go
@@ -32,7 +32,7 @@ func (r *Router) addRoutes() {
 	// ----------------- People -----------------
 	auth.POST("/people", r.peopleCnt.CreateUser)
 	auth.DELETE("/people/:user_id", r.peopleCnt.DeleteUser)
-	auth.PATCH("/people/employee/:user_id", r.peopleCnt.UserUpdate)
+	auth.PATCH("/people/employee/:user_id", r.peopleCnt.EmployeeUpdate)
 
 	auth.GET("/people/self/profile", r.peopleCnt.SelfProfile)
 	auth.GET("/people/:user_id/profile", r.peopleCnt.UserProfile)
